tests/src/main/java/kendal/test/negative/interpolation/InvalidVarReference.out
InvalidVarReference.java:1:1: compiler.err.cant.resolve.location: kindname.variable, missingVariable, , , (compiler.misc.location: kindname.class, kendal.test.negative.interpolation.InvalidVarReference, null)
1 error